tests/invalid/illtyped_compare.err_exp
illtyped_compare.m:017: In clause for unification predicate for type illtyped_compare.bar_rep:
illtyped_compare.m:017:   in argument 2 of call to predicate `illtyped_compare.compare_bar/3':
illtyped_compare.m:017:   type error: variable `HeadVar__1' has type `(illtyped_compare.bar_rep)',
illtyped_compare.m:017:   expected type was `(illtyped_compare.bar)'.
	The partial type assignment was:
	HeadVar__1_1: (illtyped_compare.bar_rep)
	HeadVar__2_2: (illtyped_compare.bar_rep)
	V_3: comparison_result

illtyped_compare.m:017: In clause for unification predicate for type illtyped_compare.bar_rep:
illtyped_compare.m:017:   in argument 3 of call to predicate `illtyped_compare.compare_bar/3':
illtyped_compare.m:017:   type error: variable `HeadVar__2' has type `(illtyped_compare.bar_rep)',
illtyped_compare.m:017:   expected type was `(illtyped_compare.bar)'.
	The partial type assignment was:
	HeadVar__1_1: (illtyped_compare.bar_rep)
	HeadVar__2_2: (illtyped_compare.bar_rep)
	V_3: comparison_result

illtyped_compare.m:017: In clause for comparison predicate for type illtyped_compare.bar_rep:
illtyped_compare.m:017:   in argument 2 of call to predicate `illtyped_compare.compare_bar/3':
illtyped_compare.m:017:   type error: variable `HeadVar__2' has type `(illtyped_compare.bar_rep)',
illtyped_compare.m:017:   expected type was `(illtyped_compare.bar)'.
	The partial type assignment was:
	HeadVar__1_1: comparison_result
	HeadVar__2_2: (illtyped_compare.bar_rep)
	HeadVar__3_3: (illtyped_compare.bar_rep)

illtyped_compare.m:017: In clause for comparison predicate for type illtyped_compare.bar_rep:
illtyped_compare.m:017:   in argument 3 of call to predicate `illtyped_compare.compare_bar/3':
illtyped_compare.m:017:   type error: variable `HeadVar__3' has type `(illtyped_compare.bar_rep)',
illtyped_compare.m:017:   expected type was `(illtyped_compare.bar)'.
	The partial type assignment was:
	HeadVar__1_1: comparison_result
	HeadVar__2_2: (illtyped_compare.bar_rep)
	HeadVar__3_3: (illtyped_compare.bar_rep)

